[gd_scene load_steps=2 format=3 uid="uid://mrsu00mdggwr"]

[ext_resource type="Script" path="res://scene/ui/NumLineInput.gd" id="1_2r1ed"]

[node name="NumLineInput" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 119.0
offset_bottom = 20.0
script = ExtResource("1_2r1ed")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonSub" type="Button" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"

[node name="LineEdit" type="LineEdit" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="ButtonAdd" type="Button" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"
